--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
+  "functions": {
+    "server.js": {
+      "runtime": "@vercel/node@18.x"
+    }
+  },
   "rewrites": [
     {
       "source": "/api/(.*)",
