--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "server.js": {
-      "runtime": "@vercel/node@18.x"
+      "runtime": "@vercel/node"
     }
   },
   "rewrites": [
