--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "firebase-admin": "^13.2.0",
-    "multer": "^1.4.5-lts.2"
+    "multer": "^1.4.5-lts.2",
+    "uuid": "^11.1.0"
   }
 }
