--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-firestore": "^0.1.9",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "firebase-admin": "^13.2.0",
