--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "firebase-admin": "^11.11.1",
+    "mime": "^4.0.6",
     "multer": "^1.4.5-lts.2",
     "uuid": "^11.1.0"
   }
