--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "connect-session-firebase": "^11.0.0",
+    "connect-firestore": "^0.1.9",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "firebase-admin": "^11.11.1",
