--- a/package.json
+++ b/package.json
@@ -4,20 +4,31 @@
   "description": "This interactive dashboard provides a comprehensive overview of lithium battery recycling facilities across North America. The dashboard includes an interactive map, detailed facility information, and data visualizations to help understand the current state of the industry.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chart.js": "^4.4.8",
     "connect-firestore": "^0.1.9",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "firebase": "^11.6.0",
     "firebase-admin": "^11.11.1",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "mime": "^4.0.6",
     "multer": "^1.4.5-lts.2",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.2.3",
+    "vite": "^6.2.5"
   }
 }
