--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ lerna-debug.log*
 
 # Environment variables
 .env
+.env.development
+.env.production
 .env.test
 .env.local
 .env.development.local
