--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "leaflet.markercluster": "^1.5.3",
     "mime": "^4.0.6",
     "multer": "^1.4.5-lts.2",
+    "pinia": "^3.0.1",
     "uuid": "^11.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
